fix docker compose

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -148,144 +148,8 @@ jobs:
         run: |
           ./scripts/e2e.sh e2e
 
-  # 生成 Docker 相关的测试用例列表
-  GenerateDockerE2ETestCasesList:
-    runs-on: ubuntu-latest
-    outputs:
-      cases: ${{ steps.discover.outputs.cases }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Discover Docker Test Cases
-        id: discover
-        run: |
-          # 查找包含 docker 相关的测试用例目录
-          cases=($(find test/e2e/test_cases -mindepth 1 -maxdepth 1 -type d -name "*docker*" -o -name "*container_stdio*" | xargs -n1 basename | sort))
-          # 检查是否找到用例
-          if [ ${#cases[@]} -eq 0 ]; then
-            echo "Warning: No docker-related test cases found"
-            cases=()
-          fi
-          # 转换为JSON数组格式
-          json="["
-          for i in "${!cases[@]}"; do
-            json+="\"${cases[$i]}\""
-            if [ $i -lt $((${#cases[@]}-1)) ]; then
-              json+=","
-            fi
-          done
-          json+="]"
-          # 输出JSON到文件和控制台
-          echo "$json" > cases.json
-          cat cases.json
-          echo "cases=$json" >> $GITHUB_OUTPUT
-
-  # Docker SDK 兼容性测试（仅针对 Docker 相关的测试用例）
-  DockerSDKCompatibility:
-    runs-on: ubuntu-latest
-    needs: 
-      - GenerateDockerE2ETestCasesList
-      - GenerateE2ETestImage
-    strategy:
-      matrix:
-        docker_version:
-          - "29.0"
-          - "28.3"
-          - "26.0"
-          - "25.0"
-          - "24.0"
-          - "20.10"
-          - "19.03"
-          - "1.12"
-        test_case: ${{ fromJson(needs.GenerateDockerE2ETestCasesList.outputs.cases) }}
-      fail-fast: false
-    timeout-minutes: 60
-    # 只有当找到 Docker 相关的测试用例时才运行
-    if: needs.GenerateDockerE2ETestCasesList.outputs.cases != '[]'
-    steps:
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 1.23.12
-
-      - name: Check out code
-        uses: actions/checkout@v4
-        with:
-          submodules: false
-
-      - name: Start Docker-in-Docker
-        run: |
-          echo "Starting Docker-in-Docker for version ${{ matrix.docker_version }}"
-          # 使用不同的端口避免与主机 Docker 冲突
-          docker run -d --name docker-dind-${{ matrix.docker_version }}-${{ matrix.test_case }} \
-            --privileged \
-            -p 2376:2375 \
-            -e DOCKER_TLS_CERTDIR="" \
-            docker:${{ matrix.docker_version }}-dind \
-            dockerd --host=unix:///var/run/docker.sock --host=tcp://0.0.0.0:2375
-          
-          echo "Waiting for Docker daemon to be ready..."
-          timeout 120 bash -c 'until DOCKER_HOST=tcp://localhost:2376 docker info > /dev/null 2>&1; do sleep 2; done'
-          echo "Docker daemon is ready"
-          echo "=== Docker Engine Version ==="
-          DOCKER_HOST=tcp://localhost:2376 docker version
-          echo "=== Docker Info ==="
-          DOCKER_HOST=tcp://localhost:2376 docker info
-
-      - name: Configure Docker client
-        run: |
-          echo "DOCKER_HOST=tcp://localhost:2376" >> $GITHUB_ENV
-
-      - name: Update Docker-compose to v2
-        run: |
-          sudo curl -SL https://github.com/docker/compose/releases/download/v2.7.0/docker-compose-linux-x86_64 -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose version
-
-      - name: Download Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: loongcollector-image
-
-      - name: Import Image from Tar
-        run: docker load -i ./image.tar
-
-      - name: Docker SDK Compatibility Test
-        env:
-          TEST_CASE: ${{ matrix.test_case }}
-          DOCKER_VERSION: ${{ matrix.docker_version }}
-        run: |
-          echo "========================================="
-          echo "Testing Docker SDK 28.1.1 compatibility"
-          echo "Docker Engine Version: ${{ matrix.docker_version }}"
-          echo "Test Case: ${{ matrix.test_case }}"
-          echo "========================================="
-          ./scripts/e2e.sh e2e
-
-      - name: Collect Docker logs on failure
-        if: failure()
-        run: |
-          echo "=== Docker daemon info ==="
-          docker info || true
-          docker version || true
-          echo "=== Running containers ==="
-          docker ps || true
-          echo "=== All containers ==="
-          docker ps -a || true
-          echo "=== Docker images ==="
-          docker images || true
-          echo "=== DinD container logs ==="
-          docker logs docker-dind-${{ matrix.docker_version }}-${{ matrix.test_case }} || true
-
-      - name: Stop Docker-in-Docker
-        if: always()
-        run: |
-          docker stop docker-dind-${{ matrix.docker_version }}-${{ matrix.test_case }} || true
-          docker rm docker-dind-${{ matrix.docker_version }}-${{ matrix.test_case }} || true
-
   actions-timeline:
-    needs: [E2E, DockerSDKCompatibility]
+    needs: [E2E]
     runs-on: ubuntu-latest
     permissions:
       actions: read
