--- a/.github/workflows/check-compatibility.yaml
+++ b/.github/workflows/check-compatibility.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Build
+name: Build Core
 
 on:
   pull_request:
@@ -31,7 +31,7 @@ on:
       - 2.*
 
 jobs:
-  Build:
+  BuildCore:
     runs-on: ${{ matrix.runner }}
     timeout-minutes: 60
     strategy:
@@ -39,16 +39,30 @@ jobs:
         runner: [arc-runner-set-ilogtail]
       fail-fast: true
     steps:
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 1.23.12
+      - name: Set up Go (pre-installed on runner)
+        run: |
+          # Go 已经预安装在 /usr/local/go，确保 PATH 包含 Go 二进制文件路径
+          echo "GOROOT=/usr/local/go" >> $GITHUB_ENV
+          echo "PATH=/usr/local/go/bin:$PATH" >> $GITHUB_ENV
+          
+          # 验证 Go 是否可用
+          if [ -f "/usr/local/go/bin/go" ]; then
+            echo "✅ Go 已安装在 /usr/local/go"
+            /usr/local/go/bin/go version
+          elif command -v go &> /dev/null; then
+            echo "✅ Go 已在 PATH 中可用"
+            go version
+          else
+            echo "❌ 错误: Go 未找到"
+            echo "请确保 Go 已安装在 /usr/local/go 或已添加到 PATH"
+            exit 1
+          fi
 
       - name: Check out code
         uses: actions/checkout@v4
         with:
           submodules: false
-
+      
       - name: Set custom submodule URL and fetch
         run: |
           SUBMODULE_PATH="core/_thirdparty/coolbpf"
@@ -57,20 +71,17 @@ jobs:
           cd $SUBMODULE_PATH
           echo "Current commit: $(git rev-parse HEAD)"
 
-      - name: Build Binary
+      - name: Check compatibility
         env:
           BUILD_LOGTAIL_UT: OFF
           ENABLE_COMPATIBLE_MODE: ON
           ENABLE_STATIC_LINK_CRT: ON
-          WITHOUTGDB: ON
           MAKE_JOBS: 16
-        run: make dist
-
-      - name: Build Docker
-        run: make docker
+          WITHOUTGDB: ON
+        run: make dist && scripts/check_glibc.sh && scripts/check_cpu_instruction.sh && scripts/check_dependencies.sh
 
   actions-timeline:
-    needs: [Build]
+    needs: [BuildCore]
     runs-on: ubuntu-latest
     permissions:
       actions: read
