--- a/.github/workflows/build-core-ut.yaml
+++ b/.github/workflows/build-core-ut.yaml
@@ -39,10 +39,24 @@ jobs:
         runner: [arc-runner-set-ilogtail]
       fail-fast: true
     steps:
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 1.23.12
+      - name: Set up Go (pre-installed on runner)
+        run: |
+          # Go 已经预安装在 /usr/local/go，确保 PATH 包含 Go 二进制文件路径
+          echo "GOROOT=/usr/local/go" >> $GITHUB_ENV
+          echo "PATH=/usr/local/go/bin:$PATH" >> $GITHUB_ENV
+          
+          # 验证 Go 是否可用
+          if [ -f "/usr/local/go/bin/go" ]; then
+            echo "✅ Go 已安装在 /usr/local/go"
+            /usr/local/go/bin/go version
+          elif command -v go &> /dev/null; then
+            echo "✅ Go 已在 PATH 中可用"
+            go version
+          else
+            echo "❌ 错误: Go 未找到"
+            echo "请确保 Go 已安装在 /usr/local/go 或已添加到 PATH"
+            exit 1
+          fi
 
       - name: Check out code
         uses: actions/checkout@v4
