--- a/.github/workflows/check-compatibility.yaml
+++ b/.github/workflows/check-compatibility.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Build Core
+name: Check Compatibility
 
 on:
   pull_request:
