--- a/docker/Dockerfile_development_part
+++ b/docker/Dockerfile_development_part
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM sls-opensource-registry.cn-shanghai.cr.aliyuncs.com/loongcollector-community-edition/loongcollector-build-linux:2.1.11
+FROM sls-opensource-registry.cn-shanghai.cr.aliyuncs.com/loongcollector-community-edition/loongcollector-build-linux:2.1.13
 
 ARG HOST_OS=Linux
 ARG VERSION=0.0.1
@@ -38,6 +38,7 @@ COPY --from=build /src/output/libGoPluginBase.so /loongcollector/
 COPY --from=build /src/example_config/quick_start/loongcollector_config.json /loongcollector/conf/instance_config/local/loongcollector_config.json
 COPY --from=build /src/core/build/go_pipeline/libGoPluginAdapter.so /loongcollector/
 COPY --from=build /src/core/build/ebpf/driver/libeBPFDriver.so /loongcollector/
+COPY --from=build /src/core/build/_thirdparty/coolbpf/src/profiler/release/libprofiler.so /loongcollector/
 
 ENV HOST_OS=$HOST_OS
 ENV LOGTAIL_VERSION=$VERSION
