Update auto-release workflow to use Ubuntu 24.04 for all job runners, enhancing compatibility and support for the latest features.
Change-Id: Ib01221543e63ca04fa0c774516430a5b56e8b36a
Co-developed-by: Cursor <noreply@cursor.com>

--- a/.github/workflows/auto-release.yaml
+++ b/.github/workflows/auto-release.yaml
@@ -151,7 +151,7 @@ jobs:
       matrix:
         include:
           - arch: amd64
-            runner: ubuntu-latest
+            runner: ubuntu-24.04
             should_build: ${{ github.event.inputs.build_linux_amd64 == 'true' }}
           - arch: arm64
             runner: ubuntu-24.04-arm
@@ -302,7 +302,7 @@ jobs:
   # 第二步：合并包并准备上传
   prepare-upload:
     needs: [create-release-branch, build-linux, build-windows]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     timeout-minutes: 30
     if: |
       always() &&
@@ -370,7 +370,7 @@ jobs:
   # 第三步：构建和上传 Docker 镜像
   upload-images:
     needs: [create-release-branch, prepare-upload]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     timeout-minutes: 60
     if: |
       always() &&
@@ -461,7 +461,7 @@ jobs:
       always() &&
       (needs.create-release-branch.result == 'success') &&
       (needs.upload-images.result == 'success' || needs.upload-images.result == 'skipped')
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     timeout-minutes: 30
     steps:
       - name: Check out code
@@ -505,7 +505,7 @@ jobs:
   # 第五步：创建 GitHub Release
   create-release:
     needs: [create-release-branch, upload-images, test-release]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     timeout-minutes: 30
     if: |
       always() &&
@@ -682,7 +682,7 @@ jobs:
 
   actions-timeline:
     needs: [create-release]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       actions: read
     steps:
