Enhance build process to support librdkafka integration
- Added WITH_LIBRDKAFKA option to Makefile and scripts for conditional inclusion of librdkafka SASL libraries.
- Updated auto-release workflow to enable librdkafka support during the build.
- Modified Dockerfile to copy SASL libraries from the output directory instead of relying on a large build image.
- Adjusted dist.sh to include SASL libraries in the distribution package when WITH_LIBRDKAFKA is enabled.

This change improves the build efficiency and simplifies the dependency management for Kafka integration.

--- a/.github/workflows/auto-release.yaml
+++ b/.github/workflows/auto-release.yaml
@@ -212,7 +212,7 @@ jobs:
             echo "Created mock package: dist/loongcollector-$VERSION.linux-${{ matrix.arch }}.tar.gz"
           else
             # 正常构建模式
-            make dist
+            make dist WITH_LIBRDKAFKA=true
           fi
           
           ls -la dist/
