--- a/docker/Dockerfile_release
+++ b/docker/Dockerfile_release
@@ -46,9 +46,13 @@ RUN if [ "$HOST_OS" = "Linux" ]; then \
     fi
 
 # Provide CentOS-compiled SASL libraries for librdkafka (expects libsasl2.so.3)
-COPY --from=sls-opensource-registry.cn-shanghai.cr.aliyuncs.com/loongcollector-community-edition/loongcollector-build-linux:2.1.13 /usr/lib64/libsasl2.so.3 /usr/lib/x86_64-linux-gnu/
-COPY --from=sls-opensource-registry.cn-shanghai.cr.aliyuncs.com/loongcollector-community-edition/loongcollector-build-linux:2.1.13 /usr/lib64/libsasl2.so.3.0.0 /usr/lib/x86_64-linux-gnu/
-COPY --from=sls-opensource-registry.cn-shanghai.cr.aliyuncs.com/loongcollector-community-edition/loongcollector-build-linux:2.1.13 /usr/lib64/sasl2 /usr/lib/x86_64-linux-gnu/sasl2
+# These files are now included in the dist package to avoid pulling the large build image
+RUN if [ -f /usr/local/loongcollector/libsasl2/libsasl2.so.3 ]; then \
+        mv /usr/local/loongcollector/libsasl2/libsasl2.so.3 /usr/lib/x86_64-linux-gnu/ && \
+        mv /usr/local/loongcollector/libsasl2/libsasl2.so.3.0.0 /usr/lib/x86_64-linux-gnu/ && \
+        mv /usr/local/loongcollector/libsasl2/sasl2 /usr/lib/x86_64-linux-gnu/ && \
+        rmdir /usr/local/loongcollector/libsasl2 2>/dev/null || true; \
+    fi || true
 
 WORKDIR /usr/local/loongcollector
 RUN mkdir -p /usr/local/loongcollector/conf/instance_config/local
