Enhance GitHub workflows by adding concurrency settings and updating paths to ignore
Added concurrency settings to all workflow files to manage job execution and prevent overlap. Updated paths to ignore in the pull request triggers for build, compatibility check, E2E test, and static check workflows, ensuring that changes in specific directories do not trigger unnecessary builds.

Change-Id: I0211e84dc21d5ce365dcaab669966715f5af0452
Co-developed-by: Cursor <noreply@cursor.com>

--- a/.github/workflows/release-edge.yaml
+++ b/.github/workflows/release-edge.yaml
@@ -19,12 +19,20 @@ on:
     branches:
       - main
     paths-ignore:
-      - 'docs/**'
-      - 'example_config/**'
-      - 'k8s_template/**'
-      - 'changes/**'
-      - 'licenses/**'
-      - 'CHANGELOG.md'
+      - "changes/**"
+      - "config_server/**"
+      - "docs/**"
+      - "example_config/**"
+      - "k8s_template/**"
+      - "licenses/**"
+      - "test/**"
+      - "tools/**"
+      - "CHANGELOG.md"
+  workflow_dispatch:
+
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   # 第一步：构建不同架构的安装包
