--- a/.github/workflows/auto-release.yaml
+++ b/.github/workflows/auto-release.yaml
@@ -51,6 +51,10 @@ on:
         type: boolean
         default: true
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   GO_VERSION: 1.23.12
 
