--- a/.github/workflows/check-compatibility.yaml
+++ b/.github/workflows/check-compatibility.yaml
@@ -17,18 +17,25 @@ name: Check Compatibility
 on:
   pull_request:
     paths-ignore:
+      - "changes/**"
+      - "config_server/**"
       - "docs/**"
       - "example_config/**"
-      - "docker/**"
       - "k8s_template/**"
-      - "changes/**"
       - "licenses/**"
+      - "test/**"
       - "CHANGELOG.md"
   push:
     branches:
       - main
       - 1.*
       - 2.*
+      - 3.*
+  workflow_dispatch:
+
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   CheckCompatibility:
