--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -17,11 +17,11 @@ name: E2E Test
 on:
   pull_request:
     paths-ignore:
+      - "changes/**"
+      - "config_server/**"
       - "docs/**"
       - "example_config/**"
-      - "docker/**"
       - "k8s_template/**"
-      - "changes/**"
       - "licenses/**"
       - "CHANGELOG.md"
   push:
@@ -29,6 +29,13 @@ on:
       - main
       - 1.*
       - 2.*
+      - 3.*
+  workflow_dispatch:
+
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   # 生成E2E测试用例列表
   GenerateE2ETestCasesList:
