--- a/.github/workflows/check-compatibility.yaml
+++ b/.github/workflows/check-compatibility.yaml
@@ -33,7 +33,7 @@ on:
       - 3.*
 
 concurrency:
-  group: ${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
