--- a/core/unittest/monitor/CMakeLists.txt
+++ b/core/unittest/monitor/CMakeLists.txt
@@ -27,8 +27,12 @@ target_link_libraries(plugin_metric_manager_unittest ${UT_BASE_TARGET})
 add_executable(self_monitor_metric_event_unittest SelfMonitorMetricEventUnittest.cpp)
 target_link_libraries(self_monitor_metric_event_unittest ${UT_BASE_TARGET})
 
+add_executable(alarm_disk_buffer_unittest AlarmDiskBufferUnittest.cpp)
+target_link_libraries(alarm_disk_buffer_unittest ${UT_BASE_TARGET})
+
 include(GoogleTest)
 gtest_discover_tests(alarm_manager_unittest)
 gtest_discover_tests(metric_manager_unittest)
 gtest_discover_tests(plugin_metric_manager_unittest)
 gtest_discover_tests(self_monitor_metric_event_unittest)
+gtest_discover_tests(alarm_disk_buffer_unittest)
