--- a/core/unittest/config/CMakeLists.txt
+++ b/core/unittest/config/CMakeLists.txt
@@ -15,32 +15,23 @@
 cmake_minimum_required(VERSION 3.22)
 project(config_unittest)
 
-# add_executable(config_match_unittest ConfigMatchUnittest.cpp)
-# target_link_libraries(config_match_unittest ${UT_BASE_TARGET})
-
-# add_executable(config_updator_unittest ConfigUpdatorUnittest.cpp)
-# target_link_libraries(config_updator_unittest ${UT_BASE_TARGET})
-
-add_executable(pipeline_config_unittest PipelineConfigUnittest.cpp)
-target_link_libraries(pipeline_config_unittest ${UT_BASE_TARGET})
-
 add_executable(collection_config_unittest CollectionConfigUnittest.cpp)
 target_link_libraries(collection_config_unittest ${UT_BASE_TARGET})
 
-add_executable(task_config_unittest TaskConfigUnittest.cpp)
-target_link_libraries(task_config_unittest ${UT_BASE_TARGET})
-
-add_executable(config_watcher_unittest ConfigWatcherUnittest.cpp)
-target_link_libraries(config_watcher_unittest ${UT_BASE_TARGET})
-
-add_executable(config_update_unittest ConfigUpdateUnittest.cpp)
-target_link_libraries(config_update_unittest ${UT_BASE_TARGET})
+add_executable(common_config_provider_unittest CommonConfigProviderUnittest.cpp)
+target_link_libraries(common_config_provider_unittest ${UT_BASE_TARGET})
 
 add_executable(config_feedback_receiver_unittest ConfigFeedbackReceiverUnittest.cpp)
 target_link_libraries(config_feedback_receiver_unittest ${UT_BASE_TARGET})
 
-add_executable(singleton_input_collection_config_update_unittest SingletonInputCollectionConfigUpdateUnittest.cpp)
-target_link_libraries(singleton_input_collection_config_update_unittest ${UT_BASE_TARGET})
+add_executable(config_manager_unittest ConfigManagerUnittest.cpp)
+target_link_libraries(config_manager_unittest ${UT_BASE_TARGET})
+
+add_executable(config_update_unittest ConfigUpdateUnittest.cpp)
+target_link_libraries(config_update_unittest ${UT_BASE_TARGET})
+
+add_executable(config_watcher_unittest ConfigWatcherUnittest.cpp)
+target_link_libraries(config_watcher_unittest ${UT_BASE_TARGET})
 
 add_executable(onetime_config_manager_unittest OnetimeConfigInfoManagerUnittest.cpp)
 target_link_libraries(onetime_config_manager_unittest ${UT_BASE_TARGET})
@@ -48,8 +39,14 @@ target_link_libraries(onetime_config_manager_unittest ${UT_BASE_TARGET})
 add_executable(onetime_config_update_unittest OnetimeConfigUpdateUnittest.cpp)
 target_link_libraries(onetime_config_update_unittest ${UT_BASE_TARGET})
 
-add_executable(common_config_provider_unittest CommonConfigProviderUnittest.cpp)
-target_link_libraries(common_config_provider_unittest ${UT_BASE_TARGET})
+add_executable(pipeline_config_unittest PipelineConfigUnittest.cpp)
+target_link_libraries(pipeline_config_unittest ${UT_BASE_TARGET})
+
+add_executable(singleton_input_collection_config_update_unittest SingletonInputCollectionConfigUpdateUnittest.cpp)
+target_link_libraries(singleton_input_collection_config_update_unittest ${UT_BASE_TARGET})
+
+add_executable(task_config_unittest TaskConfigUnittest.cpp)
+target_link_libraries(task_config_unittest ${UT_BASE_TARGET})
 
 if (ENABLE_ENTERPRISE)
     # add_executable(legacy_config_provider_unittest LegacyConfigProviderUnittest.cpp)
@@ -57,16 +54,17 @@ if (ENABLE_ENTERPRISE)
 endif ()
 
 include(GoogleTest)
-gtest_discover_tests(pipeline_config_unittest)
 gtest_discover_tests(collection_config_unittest)
-gtest_discover_tests(task_config_unittest)
-gtest_discover_tests(config_watcher_unittest)
-gtest_discover_tests(config_update_unittest)
+gtest_discover_tests(common_config_provider_unittest)
 gtest_discover_tests(config_feedback_receiver_unittest)
-gtest_discover_tests(singleton_input_collection_config_update_unittest)
+gtest_discover_tests(config_manager_unittest)
+gtest_discover_tests(config_update_unittest)
+gtest_discover_tests(config_watcher_unittest)
 gtest_discover_tests(onetime_config_manager_unittest)
 gtest_discover_tests(onetime_config_update_unittest)
-gtest_discover_tests(common_config_provider_unittest)
+gtest_discover_tests(pipeline_config_unittest)
+gtest_discover_tests(singleton_input_collection_config_update_unittest)
+gtest_discover_tests(task_config_unittest)
 if (ENABLE_ENTERPRISE)
     # gtest_discover_tests(legacy_config_provider_unittest)
 endif ()
