feat: add support for corporate features in plugin naming and configuration
- Updated AppConfig to return corporate-specific log and plugin names based on the ENABLE_CORP_FEATURE flag.
- Modified CMakeLists.txt to set the output name of GoPluginAdapter conditionally.
- Adjusted logtail.go to link against the correct plugin adapter based on the corporate feature flag.
- Updated plugin_build.sh to conditionally set the shared library name for the plugin base.

These changes enhance flexibility for corporate environments while maintaining compatibility with existing configurations.

--- a/core/go_pipeline/CMakeLists.txt
+++ b/core/go_pipeline/CMakeLists.txt
@@ -17,6 +17,9 @@ project(go_pipeline)
 
 if (LINUX OR MSVC)
     add_library(GoPluginAdapter SHARED LogtailPluginAdapter.h LogtailPluginAdapter.cpp)
+    if (ENABLE_CORP_FEATURE)
+        set_target_properties(GoPluginAdapter PROPERTIES OUTPUT_NAME "PluginAdapter")
+    endif()
     if (LINUX)
         target_link_libraries(GoPluginAdapter dl)
     else ()
