refactor: replace Boost filesystem with std::filesystem across the codebase
- Updated various files to utilize std::filesystem instead of Boost's filesystem for improved compatibility and modern C++ standards.
- Adjusted path handling in unit tests and application logic to ensure consistent usage of std::filesystem.
- Removed unnecessary Boost includes and streamlined directory operations for better readability and maintainability.

This change enhances the codebase by leveraging the standard library's filesystem capabilities, promoting better performance and reducing dependencies.

--- a/.github/workflows/release-edge.yaml
+++ b/.github/workflows/release-edge.yaml
@@ -28,6 +28,7 @@ on:
       - "test/**"
       - "tools/**"
       - "CHANGELOG.md"
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
